[project]
name = "kronos"
version = "0.5.0"
description = "A file rediscovery tool."
readme = "README.md"
authors = [
    { name = "Sam Holland", email = "hol_sam@icloud.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pyfiglet>=1.0.4",
    "rich>=15.0.0",
    "textual>=8.2.3",
    "typer>=0.24.1",
]

[project.scripts]
kronos = "kronos:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
